--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,6 @@
 # Node.js 22 LTS Alpineをベースイメージとして使用
 FROM node:22-alpine
 
-
 RUN apk add --no-cache git
 
 # 作業ディレクトリを設定
@@ -11,7 +10,6 @@ WORKDIR /workspace
 COPY --chown=node:node package*.json ./
 COPY --chown=node:node tsconfig.json ./
 
-# ★★★ ここから追加/修正 ★★★
 # .next ディレクトリを明示的に作成し、所有者をnodeユーザーにする
 # これにより、next_cache_volume が空でマウントされる際に、このディレクトリの状態が
 # ボリュームにコピーされることを期待します。
@@ -21,13 +19,13 @@ RUN mkdir -p /workspace/.next && \
 # /workspace ディレクトリ全体の所有者も念のためnodeユーザーにしておく
 # (以前npm installが通った時の設定に近い形)
 RUN chown -R node:node /workspace
-# ★★★ ここまで追加/修正 ★★★
 
 # nodeユーザーに切り替え
 USER node
 
 # 依存関係をインストール
 RUN npm install --save-dev ts-node-dev@1.1.8
+RUN npm install gray-matter remark remark-html
 
 # Next.jsが使用するポート
 EXPOSE 3000
